fixed header, z-index over portfolio pics, top margin section to compensate

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,11 @@ header {
 	background:#ffffff;
 /*	padding:20px;*/
 	height: 60px;
+	width:100%;
+	position:fixed;
+	top:0;
 	border-bottom:thick solid #cccccc;
+	z-index: 2;
 }
 .hope {
 	height:60px;
@@ -63,7 +67,7 @@ footer {
 	color: #80878e;
 }
 section {
-	margin:20px auto 20px;
+	margin:80px auto 20px;
 	min-height: calc(100vh - 53px);
 	width:960px;
 }
